# crowkit

./: README.md  pyproject.toml
crowkit/: __init__.py  cluster_counts_forecast.py
examples/cluster_counts_forecast/: cluster_config.yaml  run_forecast.py
